tests/error/07.program
{
    string_s = "0123456789";
    string_s[len(string_s)] = "0";
}